--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # Server Configuration
-server.port=8082
+server.port=8080
 
-# Configuración de la base de datos MySQL
+# Configuración de MySQL
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/hamburgbackend_db?useSSL=false&serverTimezone=UTC}
 spring.datasource.username=${DB_USERNAME:hamburg}
-spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
 spring.datasource.password=${DB_PASSWORD:hamburg123}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Configuración JPA
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 
 # Deshabilitar inicialización automática de data.sql
